# openclaw-mini

./: .env.example  .gitignore  README.md  SOUL.md  pyproject.toml
service/: openclaw-mini.launchd.plist  openclaw-mini.service
skills/: README.md  discord-safety.md  reply-style.md
src/openclaw_mini/: __init__.py  bot.py  config.py  llm.py  main.py  skills.py  soul.py
